--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,11 @@
 
     <string name="action_settings">Settings</string>
 
-    <string name="fragment_view_city">View Area</string>
+    <string name="fragment_view_city">View Areas</string>
     <string name="fragment_view_cluster">View Cluster</string>
     <string name="fragment_view_cluster_detail">View Cluster Detail</string>
+
+    <string name="fragment_cluster_homepass">Total Homepass</string>
 
     <string name="fragment_cluster_detail_subsname">Subs Name</string>
     <string name="fragment_cluster_detail_subsid">Subs ID</string>
@@ -23,6 +25,10 @@
     <string name="activity_login_password">Password</string>
     <string name="activity_login_signin">Login</string>
     <string name="activity_login_invalid">Wrong Username / Password</string>
+    <string name="activity_login_retry">Retry</string>
+    <string name="activity_login_failed_connect">Failed To Connect</string>
+    <string name="activity_login_failed_code">Code</string>
+    <string name="activity_login_failed_desc">Description</string>
 
     <string name="spinner_competitor_prompt">Choose a Competitor</string>
 
@@ -32,6 +38,10 @@
     <string name="fragment_competitor">Competitor</string>
 
     <string name="dialog_addcompetitor">Add Competitor</string>
+    <string name="dialog_title_error">Error</string>
+    <string name="dialog_content_failedconnect">Failed to connect, please check your internet connection</string>
+    <string name="dialog_areas_searchname">Area Name</string>
+    <string name="dialog_cluster_searchname">Cluster Name</string>
 
     <string-array name="competitor_arrays">
         <item>Firstmedia</item>
